# byte

./: Cargo.toml  README.md
.github/workflows/: compile.yml  release.yml
src/: main.rs
src/cli/: mod.rs
src/compression/: mod.rs
src/ui/: cli.rs  tui.rs
